--- a/package.json
+++ b/package.json
@@ -1,9 +1,56 @@
 {
-  "name": "nw-demo",
-  "main": "index.html",
-  "window": {
-    "toolbar": false,
-    "width": 800,
-    "height": 600
+  "name": "gui-react-start",
+  "version": "0.0.1",
+  "description": "A boilerplate for running a Webpack workflow in Node express",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com"
+  },
+  "author": "Guilherme Guerchmann",
+  "license": "MIT",
+  "dependencies": {
+    "autoprefixer-loader": "^2.0.0",
+    "babel-core": "^5.6.15",
+    "babel-loader": "^5.3.1",
+    "body-parser": "^1.13.2",
+    "cerebral-react-immutable-store": "^0.5.0",
+    "classnames": "^2.1.3",
+    "css-loader": "^0.10.1",
+    "express": "^4.12.3",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "lodash": "^3.10.0",
+    "multer": "^0.1.8",
+    "node-libs-browser": "^0.5.2",
+    "node-sass": "^3.2.0",
+    "query-string": "^2.4.0",
+    "react": "^0.13.3",
+    "react-router": "^1.0.0-beta3",
+    "rimraf": "^2.4.1",
+    "rmdir": "^1.1.0",
+    "sass-loader": "^1.0.2",
+    "style-loader": "^0.10.2",
+    "superagent": "^1.2.0",
+    "webpack": "^1.10.1"
+  },
+  "devDependencies": {
+    "babel": "*",
+    "babel-plugin-react-hotify": "^0.1.1",
+    "core-js": "^0.9.18",
+    "install": "^0.1.8",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.37",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-cli": "^0.1.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.5.1",
+    "react-hot-loader": "^1.2.7",
+    "react-hotify": "^0.1.1",
+    "webpack-dev-server": "^1.8.0"
   }
 }
