--- a/package.json
+++ b/package.json
@@ -1,79 +1,29 @@
 {
-  "name": "gui-react-start",
-  "version": "0.0.1",
-  "description": "A boilerplate for running a Webpack workflow in Node express",
-  "main": "server.js",
-  "scripts": {
-    "start": "npm run webpack & npm run serve",
-    "webpack": "node_modules/.bin/webpack -w",
-    "serve": "NODE_ENV=development node_modules/.bin/nodemon -q boot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "redux-tiny-router",
+  "version": "0.0.7",
+  "author": {
+    "name": "Guilherme Guerchmann",
+    "email": "gui@guerch.net",
+    "url": "http://www.guerch.net"
+  },
+  "description": "A Router made for Redux and made for universal apps! stop using the router as a controller... its just state!",
+  "main": "src/shared/redux/router/init.js",
+  "keywords": [
+    "redux",
+    "router",
+    "universal",
+    "tiny"
+  ],
+  "engines": {
+    "node": ">= 0.12.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com"
+    "url": "https://github.com/Agamennon/redux-tiny-router.git"
   },
-  "author": "Guilherme Guerchmann",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer-loader": "^2.0.0",
-    "babel-core": "^5.6.15",
-    "babel-loader": "^5.3.1",
-    "babel-runtime": "^5.8.20",
-    "bluebird": "^2.9.34",
-    "body-parser": "^1.13.2",
-    "cerebral-react-immutable-store": "^0.5.0",
-    "classnames": "^2.1.3",
-    "css-loader": "^0.10.1",
-    "ejs": "^2.3.3",
-    "ejs-loader": "^0.2.1",
-    "express": "^4.12.3",
-    "express-session": "^1.11.3",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "isomorphic-fetch": "^2.1.1",
-    "jsonfile": "^2.2.1",
-    "lodash": "^3.10.0",
-    "multer": "^0.1.8",
-    "node-http-proxy": "^0.2.3",
-    "node-libs-browser": "^0.5.2",
-    "node-sass": "^3.2.0",
-    "query-string": "^2.4.0",
-    "react": "^0.13.3",
-    "react-redux": "^0.8.2",
-    "react-router": "^1.0.0-beta3",
-    "reactive-router": "^0.4.1",
-    "redux": "^1.0.0-rc",
-    "redux-devtools": "^1.0.2",
-    "redux-promise": "^0.5.0",
-    "redux-thunk": "^0.1.0",
-    "rimraf": "^2.4.1",
-    "rmdir": "^1.1.0",
-    "sass-loader": "^1.0.2",
-    "serialize-javascript": "^1.0.0",
-    "source-map-support": "^0.3.2",
-    "style-loader": "^0.10.2",
-    "superagent": "^1.3.0",
-    "underscore": "^1.8.3",
-    "webpack": "^1.11.0"
-  },
-  "devDependencies": {
-    "babel": "*",
-    "babel-plugin-react-hotify": "^0.1.1",
-    "core-js": "^0.9.18",
-    "install": "^0.1.8",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.12.37",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-cli": "^0.1.0",
-    "karma-jasmine": "^0.3.6",
-    "karma-sourcemap-loader": "^0.3.5",
-    "karma-webpack": "^1.5.1",
-    "nodemon": "^1.4.1",
-    "react-hot-loader": "^1.2.7",
-    "react-hotify": "^0.1.1",
-    "redux-devtools": "^1.0.2",
-    "redux-devtools-diff-monitor": "^0.2.2",
-    "redux-slider-monitor": "^0.4.0",
-    "webpack-dev-server": "^1.8.0"
+    "query-string": "^2.4.0"
   }
+
 }
