--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "redux-tiny-router",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "author": {
     "name": "Guilherme Guerchmann",
     "email": "gui@guerch.net",
     "url": "http://www.guerch.net"
   },
   "description": "A Router made for Redux and made for universal apps! stop using the router as a controller... its just state!",
-  "main": "src/index.js",
+  "main": "bin/reduxTinyRouter.js",
   "keywords": [
     "redux",
     "router",
@@ -23,7 +23,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "query-string": "^2.4.0"
+    "query-string": "^2.4.0",
+    "react": "^0.13.3"
+  },
+  "devDependencies": {
+    "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.8.20",
+    "path": "^0.11.14"
   }
-
 }
