--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "url": "https://github.com/Agamennon/redux-tiny-router.git"
   },
   "license": "MIT",
+  "scripts": {
+      "build": "webpack",
+      "postinstall": "npm run build"
+  },
   "dependencies": {
     "http-hash": "^2.0.0",
     "query-string": "^2.4.0",
