Specify config file?
Getting this error when installing to project

```
\
> redux-tiny-router@0.5.2 build
/Users/drk/dev/patreon/patreon_react_features/node_modules/redux-tiny-ro
uter
> webpack

Hash: 14765ec963bb1e3cd57a
Version: webpack 1.12.2
Time: 34ms
    + 1 hidden modules

ERROR in ./src/index.js
Module parse failed:
/Users/drk/dev/patreon/patreon_react_features/node_modules/redux-tiny-ro
uter/src/index.js Line 2: Unexpected token
You may need an appropriate loader to handle this file type.
|
| import * as tinyActions from './actions/actions.js'
| export {tinyActions}
| export {middleware as tinyMiddleware} from
'./middleware/middleware.js'
\
```

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "license": "MIT",
   "scripts": {
-      "build": "webpack",
+      "build": "webpack --config webpack.config.js",
       "postinstall": "npm run build"
   },
   "dependencies": {
