--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "license": "MIT",
   "scripts": {
-      "build": "webpack --config webpack.config.js",
-      "postinstall": "npm run build"
+    "build": "webpack --config webpack.config.js",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "http-hash": "^2.0.0",
@@ -35,6 +35,7 @@
   "devDependencies": {
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.20",
-    "path": "^0.11.14"
+    "path": "^0.11.14",
+    "webpack": "^1.12.2"
   }
 }
