--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "http-hash": "^2.0.0",
     "query-string": "^2.4.0",
     "react": "^0.13.3",
-    "redux": "^2.0.0"
+    "redux": "^2.0.0",
+    "webpack": "^1.12.2"
   },
   "devDependencies": {
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.20",
-    "path": "^0.11.14",
-    "webpack": "^1.12.2"
+    "path": "^0.11.14"
   }
 }
