--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   "dependencies": {
     "http-hash": "^2.0.0",
     "query-string": "^2.4.0",
-    "react": "^0.13.3",
     "redux": "^2.0.0"
   },
   "devDependencies": {
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.20",
     "path": "^0.11.14"
+  },
+  "peerDependencies": {
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
