--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-tiny-router",
-  "version": "0.5.3",
+  "version": "0.6.0",
   "author": {
     "name": "Guilherme Guerchmann",
     "email": "gui@guerch.net",
@@ -25,8 +25,9 @@
   "dependencies": {
     "http-hash": "^2.0.0",
     "query-string": "^2.4.0",
-    "react": "^0.13.3",
-    "redux": "^2.0.0"
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "redux": "^3.0.4"
   },
   "devDependencies": {
     "babel-loader": "^5.3.2",
